--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="today_weather">Today-Sunny-88/63</string>
-
+    <string name="refresh_option_title">Refresh</string>
 </resources>
