--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="today_weather">Today-Sunny-88/63</string>
     <string name="refresh_option_title">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detial">DetialActivity</string>
+
 </resources>
