--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,30 @@
     <string name="refresh_option_title">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_detial">DetialActivity</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_default" translatable="false">94043</string>
+
+    <string name="pref_unit_label">Temperature Units</string>
+    <string name="pref_unit_key">unit</string>
+    <string name="pref_unit_default">metric</string>
+    <string name="pref_unit_metric_value">metric</string>
+    <string name="pref_unit_imperial_value">imperial</string>
+    <string name="pref_unit_metric_label">Metric</string>
+    <string name="pref_unit_imperial_label">Imperial</string>
+
+
+    <string-array name="pref_unit_entries">
+        <item>@string/pref_unit_metric_label</item>
+        <item>@string/pref_unit_imperial_label</item>
+    </string-array>
+
+    <string-array name="pref_unit_entry_values">
+        <item>@string/pref_unit_metric_value</item>
+        <item>@string/pref_unit_imperial_value</item>
+    </string-array>
+
 
 </resources>
