--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="pref_unit_metric_label">Metric</string>
     <string name="pref_unit_imperial_label">Imperial</string>
     <string name="action_view_location">View Location</string>
-
+    <string name="action_share">Share</string>
 </resources>
