--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
 
     <string name="app_name">My Sunshine</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="today_weather">Today-Sunny-88/63</string>
+    <string name="today">Today</string>
+    <string name="weather">Sunny</string>
+    <string name="max_temp">25ْ </string>
+    <string name="min_temp">7ْ </string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
+    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
+
     <string name="refresh_option_title">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_detial">DetialActivity</string>
