--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
     <string name="refresh_option_title">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
-    <string name="title_activity_detial">DetialActivity</string>
+    <string name="title_activity_detial">Details</string>
     <string name="title_activity_settings">Settings</string>
 
     <string name="pref_location_key" translatable="false">location</string>
